--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <!-- MDB -->
   <link rel="stylesheet" href="css/mdb.min.css" />
 
+  <!-- Custom css -->
+  <link rel="stylesheet" href="main_css/style.css">
+
 
   <!-- Custom css -->
   <style>
@@ -418,9 +421,9 @@
 
 
     <!-- Section: Skills -->
-    <section class="skills" id="skills">
+    <section class="skills mb-10" id="skills">
 
-      <!--  -->
+      <!-- container wrapper  -->
       <div class="container">
 
         <div>
@@ -431,10 +434,11 @@
             exercitationem atque hic id incidunt sit sequi dolorem, voluptas aut? Culpa quae quia accusamus labore velit
             ut.</p>
         </div>
-        <!--  -->
+
+        <!-- row wrapper -->
         <div class="row">
 
-          <!-- left side -->
+          <!-- left column -->
           <div class="col-lg-6">
 
             <!-- First progress bar  -->
@@ -496,7 +500,7 @@
         
           
 
-          <!--  -->
+          <!-- right column  -->
           <div class="col-lg-6">
 
              <!-- First progress bar  -->
@@ -560,6 +564,76 @@
       <!-- End: container -->
     </section>
     <!-- End: Section -->
+
+
+
+    <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h4 class="display-6 fw-bold text-center">RESUME</h4>
+          <hr class="hr hr-blurry mb-lg-5 mb-5 w-25 mx-auto">
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="resume-title">Sumary</h3>
+            <div class="resume-item pb-0" style="color: #aaabb6;">
+              <h4>Brandon Johnson</h4>
+              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <ul class="list-unstyled">
+                <li> <i class="fas fa-arrow-right pe-2"></i> Portland par 127,Orlando, FL</li>
+                <li> <i class="fas fa-arrow-right pe-2"></i> (123) 456-7891</li>
+                <li> <i class="fas fa-arrow-right pe-2"></i> alice.barkley@example.com</li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item "  style="color: #aaabb6;">
+              <h4>Master of Fine Arts &amp; Graphic Design</h4>
+              <h5 class="text-muted">2015 - 2016</h5>
+              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            </div>
+            <div class="resume-item"  style="color: #aaabb6;">
+              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
+              <h5 class="text-muted">2010 - 2014</h5>
+              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item" style="color: #aaabb6;">
+              <h4>Senior graphic design specialist</h4>
+              <h5 class="text-muted">2019 - Present</h5>
+              <p><em>Experion, New York, NY </em></p>
+              <ul>
+                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              </ul>
+            </div>
+            <div class="resume-item"  style="color: #aaabb6;">
+              <h4>Graphic design specialist</h4>
+              <h5 class="text-muted">2017 - 2018</h5>
+              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <ul>
+                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
+
 
 
 
