--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div>
           <h4 class="display-6 fw-bold text-center">SKILLS</h4>
           <hr class="hr hr-blurry mb-lg-5 mb-5 w-25 mx-auto">
-          <p class="text-center mb-lg-5 mb-5">
+          <p class="text-center mb-lg-5 mb-5" style="color: #aaabb6">
             I have always thought that versatility is a crucial talent in the tech sector.
             I have expertise in both front-end and back-end development, and I can implement my ideas utilizing a wide
             range of computer languages and tools. Building adaptable user interfaces, developing unique APIs.</p>
@@ -579,7 +579,7 @@
         <div class="section-title">
           <h4 class="display-6 fw-bold text-center">RESUME</h4>
           <hr class="hr hr-blurry mb-lg-5 mb-5 w-25 mx-auto">
-          <p class="text-center">In addition to my technical skills, I am a strong communicator, a team player, and
+          <p class="text-center" style="color: #aaabb6">In addition to my technical skills, I am a strong communicator, a team player, and
             always eager to learn
             new technologies and techniques to stay ahead of the curve. I am committed to delivering projects on time
             and on budget, and take pride in providing exceptional customer service to my clients.</p>
@@ -1006,7 +1006,7 @@
           <!-- End: first column -->
 
           <!-- second column -->
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-lg-0 mb-5">
 
             <div>
 
@@ -1076,7 +1076,7 @@
         <!--  -->
         <div class="row gx-0 align-items-center">
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 mb-lg-0 mb-3">
 
             <div style="background: hsla(0, 0%, 100%, 0.20);
             backdrop-filter: blur(10px);
