--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <i class="fab fa-github fa-xl"></i>
               </a>
               <hr class="hr hr-blurry d-none d-xl-flex" style="height:2px; width:200px;">
-              <a class="btn btn-primary btn-lg btn-rounded " role="button" href="">
+              <a class="btn btn-light btn-lg btn-rounded " role="button" href="">
                 See my projects <i class="fas fa-angle-down ms-2"></i>
               </a>
             </div>
@@ -665,7 +665,7 @@
     <div class="container">
 
       <!-- section: my projects -->
-      <section class="mb-10 text-center">
+      <section class="mb-10 text-center" id="projects">
         <h4 class="display-6 fw-bold text-center">MY PROJECTS</h4>
         <hr class="hr hr-blurry mb-lg-8 mb-5 w-25 mx-auto">
 
@@ -680,7 +680,7 @@
               <!-- card image  -->
               <div class="bg-image hover-overlay ripple mx-3 shadow-4-strong rounded-6 mt-n3"
                 data-mdb-ripple-color="light">
-                <img src="https://mdbootstrap.com/img/new/textures/small/148.jpg" alt="" class="w-100">
+                <img src="./img/Car 9.jpg" alt="" class="w-100">
 
                 <!-- mask -->
                 <!-- modal trigger -->
@@ -693,11 +693,11 @@
               </div>
               <div class="card-body" style="color: #232629">
                 <h5 class="card-title mb-3 mt-2">
-                  AI engine
+                  Project
                 </h5>
                 <p class="text-muted">
-                  <small>Finished <u>13.09.2021</u> for
-                    <a href="" class="text-dark">Techify</a></small>
+                  <small>Finished <u>23.01.2023</u> for
+                    <a href="" class="text-dark">UGBS</a></small>
                 </p>
 
                 <div class="card-text mb-3">
@@ -707,7 +707,7 @@
                 </div>
 
                 <a href="#!" class="btn btn-secondary btn-rounded" data-mdb-toggle="modal"
-                  data-mdb-target="#firstColumn">Read more</a>
+                  data-mdb-target="#firstColumn"><i class="fas fa-arrow-right"></i></a>
               </div>
             </div>
 
@@ -722,7 +722,7 @@
               <!-- card image  -->
               <div class="bg-image hover-overlay ripple mx-3 shadow-4-strong rounded-6 mt-n3"
                 data-mdb-ripple-color="light">
-                <img src="https://mdbootstrap.com/img/new/textures/small/148.jpg" alt="" class="w-100">
+                <img src="./img/Anime 17.jpg" alt="" class="w-100">
 
                 <!-- mask -->
                 <a href="#!" data-mdb-toggle="modal" data-mdb-target="#cardSecondColumn">
@@ -734,11 +734,11 @@
               </div>
               <div class="card-body" style="color: #232629">
                 <h5 class="card-title mb-3 mt-2">
-                  AI engine
+                 Project
                 </h5>
                 <p class="text-muted">
-                  <small>Finished <u>13.09.2021</u> for
-                    <a href="" class="text-dark">Techify</a></small>
+                  <small>Finished <u>12.02.2022</u> for
+                    <a href="" class="text-dark">Emblish</a></small>
                 </p>
 
                 <div class="card-text mb-3">
@@ -747,7 +747,7 @@
                   quibusdam.
                 </div>
 
-                <a href="" class="btn btn-secondary btn-rounded">Read more</a>
+                <a href="" class="btn btn-secondary btn-rounded"><i class="fas fa-arrow-right"></i></a>
               </div>
             </div>
 
@@ -762,7 +762,7 @@
               <!-- card image  -->
               <div class="bg-image hover-overlay ripple mx-3 shadow-4-strong rounded-6 mt-n3"
                 data-mdb-ripple-color="light">
-                <img src="https://mdbootstrap.com/img/new/textures/small/148.jpg" alt="" class="w-100">
+                <img src="./img/Code 2.jpg" alt="" class="w-100">
 
                 <!-- mask -->
                 <a href="" data-mdb-target="#thirdColumn" data-mdb-toggle="modal">
@@ -774,11 +774,11 @@
               </div>
               <div class="card-body" style="color: #232629">
                 <h5 class="card-title mb-3 mt-2">
-                  AI engine
+                  Project
                 </h5>
                 <p class="text-muted">
-                  <small>Finished <u>13.09.2021</u> for
-                    <a href="" class="text-dark">Techify</a></small>
+                  <small>Finished <u>11.12.2022</u> for
+                    <a href="" class="text-dark">PyCode-Camp</a></small>
                 </p>
 
                 <div class="card-text mb-3">
@@ -787,7 +787,7 @@
                   quibusdam.
                 </div>
 
-                <a href="" class="btn btn-secondary btn-rounded">Read more</a>
+                <a href="" class="btn btn-secondary btn-rounded"><i class="fas fa-arrow-right"></i></a>
               </div>
             </div>
 
@@ -918,7 +918,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary">Go to project</button>
             </div>
           </div>
         </div>
@@ -998,6 +998,10 @@
                 <p class="text-muted mb-2 mt-4">Project Lead</p>
                 <h5 class="fw-bold text-primary mb-4">Nathaniel</h5>
 
+                <div>
+                  <i class="fas fa-quote-left mb-3"></i>
+                </div>
+
                 <p class="pb-4 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi accusantium laborum
                   saepe
                   quos
@@ -1026,6 +1030,10 @@
                 <p class="text-muted mb-2 mt-4">Project Lead</p>
                 <h5 class="fw-bold text-primary mb-4">Nathaniel</h5>
 
+                <div>
+                  <i class="fas fa-quote-left mb-3"></i>
+                </div>
+
                 <p class="pb-4 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi accusantium laborum
                   saepe
                   quos
@@ -1053,6 +1061,10 @@
 
                 <p class="text-muted mb-2 mt-4">Project Lead</p>
                 <h5 class="fw-bold text-primary mb-4">Nathaniel</h5>
+
+                <div>
+                  <i class="fas fa-quote-left mb-3"></i>
+                </div>
 
                 <p class="pb-4 mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi accusantium laborum
                   saepe
