--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
           <div class="col">
             <div class="note note-warning text-uppercase text-center text-lg-start fw-bold " role="alert"
               style="background-color: #fff;">
-              <i class="fas fa-info-circle me-3"></i>Want a view of my Resume? <a href="" target="_blank"
+              <i class="fas fa-info-circle me-3"></i>Want a view of my Resume? <a href="https://www.linkedin.com/in/nathaniel-e-adama-93802a234/" target="_blank"
                 class="ms-2">Resume</a>
             </div>
           </div>
