added linked socials

--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
           <ul class="navbar-nav flex-row">
             <!-- Icons -->
             <li class="nav-item">
-              <a class="nav-link pe-2" href="#!">
+              <a class="nav-link pe-2" href="https://github.com/s-kvng">
                 <i class="fab fa-github"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-2" href="#!">
+              <a class="nav-link px-2" href="https://www.linkedin.com/in/nathaniel-e-adama-93802a234/">
                 <i class="fab fa-linkedin"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-2" href="#!">
+              <a class="nav-link px-2" href="https://twitter.com/sirr_nathan">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
@@ -1227,7 +1227,7 @@
 
 
             <!-- Twitter -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button"
+            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/sirr_nathan" role="button"
               data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
 
 
