--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <i class="fab fa-github fa-xl"></i>
               </a>
               <hr class="hr hr-blurry d-none d-xl-flex" style="height:2px; width:200px;">
-              <a class="btn btn-light btn-lg btn-rounded " role="button" href="">
+              <a class="btn btn-light btn-lg btn-rounded " role="button" href="#projects">
                 See my projects <i class="fas fa-angle-down ms-2"></i>
               </a>
             </div>
