--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="firstColumnLabel">AI Engine</h5>
+              <h5 class="modal-title" id="firstColumnLabel">Project</h5>
               <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -1162,7 +1162,7 @@
                   </div>
 
                   <!-- button -->
-                  <input type="submit" class="btn btn-primary btn-block mb-4" style="color: #aaabb6;" value="Send">
+                  <input type="submit" class="btn btn-primary btn-block mb-4" style="color: #f7f7f7 !important" value="Send">
 
                 </form>
 
