Update Project Section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         color: #4f4f4f !important;
       }
 
-      #about-img{
+      #about-img {
         background-color: #aaabb6;
       }
     }
@@ -129,7 +129,8 @@
             </li>
 
             <li class="nav-item">
-              <a href="https://www.linkedin.com/in/nathaniel-e-adama-93802a234/" target="_blank" class="nav-link text-muted">Resume</a>
+              <a href="https://www.linkedin.com/in/nathaniel-e-adama-93802a234/" target="_blank"
+                class="nav-link text-muted">Resume</a>
             </li>
 
 
@@ -267,7 +268,7 @@
               <div class="carousel-inner shadow-5-strong" style="border-bottom-left-radius: 4rem;">
                 <!-- Single item -->
                 <div class="carousel-item active">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp"
+                  <img src="./img/Car 7.jpg"
                     class="d-block vh-100 vw-100 object-cover" alt="Sunset Over the City" />
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Cory House</h5>
@@ -277,7 +278,7 @@
 
                 <!-- Single item -->
                 <div class="carousel-item">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp"
+                  <img src="./img/h-2.jpg"
                     class="d-block vh-100 vw-100 object-cover" alt="Canyon at Nigh" />
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Dennis Ritchie</h5>
@@ -287,7 +288,7 @@
 
                 <!-- Single item -->
                 <div class="carousel-item">
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp"
+                  <img src="./img/Art 17.jpg"
                     class="d-block vh-100 vw-100 object-cover" alt="Cliff Above a Stormy Sea" />
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Kent Beck</h5>
@@ -380,11 +381,11 @@
                         <li class="mb-3"><i class="fas fa-chevron-circle-right me-2"></i> <strong>Age:</strong>
                           <span>22</span>
                         </li>
-                        <li class="mb-3"><i class="fas fa-chevron-circle-right me-2"></i> <strong>Degree:</strong>
+                        <!-- <li class="mb-3"><i class="fas fa-chevron-circle-right me-2"></i> <strong>Degree:</strong>
                           <span>HND</span>
-                        </li>
+                        </li> -->
                         <li class="mb-3"><i class="fas fa-chevron-circle-right me-2"></i> <strong>Email:</strong>
-                          <span>kvngnathan8420@</span>
+                          <span id="email">kvngnathan8420@gmail.com</span>
                         </li>
                         <li class="mb-3"><i class="fas fa-chevron-circle-right me-2"></i> <strong>Freelance:</strong>
                           <span>Available</span>
@@ -417,7 +418,7 @@
 
                 <!-- https://mdbootstrap.com/img/new/standard/people/272.jpg -->
                 <img src="img/Art-46.jpg" class="w-100  " alt="pic" />
-  
+
                 <div class="mask" style="background: linear-gradient(
                                       45deg,
                                       hsla(169, 84.5%, 52%, 0.3),
@@ -426,7 +427,7 @@
               </div>
             </div>
 
-           
+
 
           </div>
         </div>
@@ -691,7 +692,7 @@
               <!-- card image  -->
               <div class="bg-image hover-overlay ripple mx-3 shadow-4-strong rounded-6 mt-n3"
                 data-mdb-ripple-color="light">
-                <img src="./img/Car 9.jpg" alt="" class="w-100">
+                <img src="./img/bookmark_project.png" alt="" class="w-100" style="min-height: 177px;">
 
                 <!-- mask -->
                 <!-- modal trigger -->
@@ -704,17 +705,16 @@
               </div>
               <div class="card-body" style="color: #232629">
                 <h5 class="card-title mb-3 mt-2">
-                  Project
+                  Social-Website
                 </h5>
                 <p class="text-muted">
-                  <small>Finished <u>23.01.2023</u> for
-                    <a href="" class="text-dark">UGBS</a></small>
+                  <small>Finished <u>23.01.2023</u> </small>
                 </p>
 
                 <div class="card-text mb-3">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At sequi sunt inventore nulla deserunt ad
-                  officia voluptatum eius perspiciatis, quia neque nam magni, numquam magnam dolorum iure ab voluptas
-                  quibusdam.
+                  In order to enable user interaction and image sharing, I incorporated a lot of social features into
+                  this personal project. Any online image will support bookmarking by users. Users can also follow other
+                  users and like or dislike the pictures other users share.
                 </div>
 
                 <a href="#!" class="btn btn-secondary btn-rounded" data-mdb-toggle="modal"
@@ -758,7 +758,7 @@
                   quibusdam.
                 </div>
 
-                <a href="" class="btn btn-secondary btn-rounded"><i class="fas fa-arrow-right"></i></a>
+                <a href="#" data-mdb-toggle="modal" data-mdb-target="#cardSecondColumn" class="btn btn-secondary btn-rounded"><i class="fas fa-arrow-right"></i></a>
               </div>
             </div>
 
@@ -798,7 +798,7 @@
                   quibusdam.
                 </div>
 
-                <a href="" class="btn btn-secondary btn-rounded"><i class="fas fa-arrow-right"></i></a>
+                <a href="#" data-mdb-toggle="modal" data-mdb-target="#thirdColumn" class="btn btn-secondary btn-rounded"><i class="fas fa-arrow-right"></i></a>
               </div>
             </div>
 
@@ -836,7 +836,7 @@
                 <div class="row gx-lg-5 align-items-center">
                   <div class="col-lg-5 mb-5 mb-lg-0">
                     <div class="bg-image ripple rounded-7 shadow-5-strong" data-mdb-ripple-color="light">
-                      <img src="https://mdbootstrap.com/img/new/textures/full/98.jpg" class="w-100" />
+                      <img src="./img/bookmark_project(images).png" class="w-100" style="min-height:380px" />
                       <a href="#!">
                         <div class="mask" style="background-color: rgba(0, 0, 0, 0.4)">
                           <div class="d-flex justify-content-center align-items-center h-100">
@@ -844,13 +844,7 @@
                               <h3 class="text-uppercase fw-bold mb-4">
                                 The future is <u style="color: hsl(210, 12%, 80%)">now</u>
                               </h3>
-                              <p class="mb-0" style="color: hsl(210, 12%, 80%)">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Harum quia laboriosam error consequuntur fugit,
-                                doloribus rerum, iure nesciunt amet quidem veniam
-                                cupiditate hic fugiat dolore aperiam quisquam libero
-                                earum quibusdam?
-                              </p>
+                            
                             </div>
                           </div>
                         </div>
@@ -869,11 +863,13 @@
                         </div>
                       </div>
                       <div class="flex-grow-1 ms-4">
-                        <p class="fw-bold mb-1">Support 24/7</p>
+                        <p class="fw-bold mb-1">Authentication Feature</p>
                         <p class="text-muted mb-0">
-                          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                          Nihil quisquam quibusdam modi sapiente magni molestias
-                          pariatur facilis reprehenderit facere aliquam ex.
+                          The following are some of the authentication features: Django registration, login, logout,
+                          password update, and password reset
+                          views templates creation, adding a unique profile model to the user model, constructing a
+                          unique authentication backend.
+
                         </p>
                       </div>
                     </div>
@@ -885,28 +881,30 @@
                         </div>
                       </div>
                       <div class="flex-grow-1 ms-4">
-                        <p class="fw-bold mb-1">Safe and solid</p>
+                        <p class="fw-bold mb-1">Bookmarking Images</p>
                         <p class="text-muted mb-0">
-                          Eum nostrum fugit numquam, voluptates veniam neque quibusdam ullam aspernatur odio soluta,
-                          quisquam dolore animi mollitia a omnis praesentium, expedita nobis!
+                          I created a JavaScript bookmarklet that allows a user to save an online image by configuring
+                          the project for media file uploads and utilizing JavaScript with Django. Something comparable
+                          to, but less potent than, what Pinterest employs.
                         </p>
                       </div>
                     </div>
 
-                    <div class="d-flex align-items-start mb-5">
+                    <!-- <div class="d-flex align-items-start mb-5">
                       <div class="flex-shrink-0">
                         <div class="p-3 rounded-4 shadow-2-strong" style="background-color: hsl(204, 30%, 20%)">
                           <i class="fas fa-shipping-fast fa-lg text-white fa-fw"></i>
                         </div>
                       </div>
                       <div class="flex-grow-1 ms-4">
-                        <p class="fw-bold mb-1">Extremely fast</p>
+                        <p class="fw-bold mb-1">In Real time Features</p>
                         <p class="text-muted mb-0">
-                          Enim cupiditate, minus nulla dolor cumque iure eveniet facere ullam beatae hic voluptatibus
-                          dolores exercitationem? Facilis debitis aspernatur amet nisi iure eveniet facere?
+                          creating a mechanism for likes and follows, constructing an application for activity streams.
+                          making use of signals to denormalize counts. Redis is used to keep track of image views and to
+                          rank the most popular images.
                         </p>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="d-flex align-items-start">
                       <div class="flex-shrink-0">
@@ -917,8 +915,9 @@
                       <div class="flex-grow-1 ms-4">
                         <p class="fw-bold mb-1">Live analytics</p>
                         <p class="text-muted mb-0">
-                          Illum doloremque ea, blanditiis sed dolor laborum praesentium maxime sint, consectetur atque
-                          ipsum ab adipisci ullam aspernatur odio soluta, quisquam dolore
+                          Creating a mechanism for likes and follows, constructing an application for activity streams.
+                          making use of signals to denormalize counts. Redis is used to keep track of image views and to
+                          rank the most popular images.
                         </p>
                       </div>
                     </div>
@@ -929,7 +928,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Go to project</button>
+              <a type="button" href="https://github.com/s-kvng/Social-Website" target="_blank" class="btn btn-primary">Go to project</a>
             </div>
           </div>
         </div>
@@ -1106,10 +1105,10 @@
       <div class="container mb-10">
         <div class="row">
           <div class="col">
-            <div class="note note-warning text-uppercase text-center text-lg-start fw-bold " role="alert"
+            <div class="note note-secondary text-uppercase text-center text-lg-start fw-bold " role="alert"
               style="background-color: #fff;">
-              <i class="fas fa-info-circle me-3"></i>Want a view of my Resume? <a href="https://www.linkedin.com/in/nathaniel-e-adama-93802a234/" target="_blank"
-                class="ms-2">Resume</a>
+              <i class="fas fa-info-circle me-3"></i>Want a view of my Resume? <a
+                href="https://www.linkedin.com/in/nathaniel-e-adama-93802a234/" target="_blank" class="ms-2">Resume</a>
             </div>
           </div>
         </div>
@@ -1162,7 +1161,8 @@
                   </div>
 
                   <!-- button -->
-                  <input type="submit" class="btn btn-primary btn-block mb-4" style="color: #f7f7f7 !important" value="Send">
+                  <input type="submit" class="btn btn-primary btn-block mb-4" style="color: #f7f7f7 !important"
+                    value="Send">
 
                 </form>
 
@@ -1227,8 +1227,8 @@
 
 
             <!-- Twitter -->
-            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/sirr_nathan" role="button"
-              data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
+            <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://twitter.com/sirr_nathan"
+              role="button" data-mdb-ripple-color="dark"><i class="fab fa-twitter"></i></a>
 
 
             <!-- Linkedin -->
