--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
               </div>
               <div class="card-body" style="color: #232629">
                 <h5 class="card-title mb-3 mt-2">
-                  Project
+                  PyCode-Camp
                 </h5>
                 <p class="text-muted">
                   <small>Finished <u>01.03.2023</u> for
