--- a/index.html
+++ b/index.html
@@ -1486,7 +1486,7 @@
     })
 
     var typingEffect = new Typed(".multiText",{
-      strings : ["Developer", "Photographer",],
+      strings : ["Developer"],
       loop : true,
       typeSpeed : 100,
        backSpeed : 80,
